--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,6 +38,14 @@
             android:text="Gerenciar Cadastro"
             android:layout_marginTop="16dp" />
 
+        <Button
+            android:id="@+id/buttonLogout"
+            style="@style/CustomButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Sair"
+            android:layout_marginTop="16dp" />
+
     </LinearLayout>
 
 
