--- a/app/src/main/res/layout/activity_diet.xml
+++ b/app/src/main/res/layout/activity_diet.xml
@@ -5,7 +5,7 @@
     android:id="@+id/diet"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DietActivity">
+    tools:context=".activity.DietActivity">
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
