--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -2,10 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/workout"
+    android:id="@+id/registration"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.LoginActivity">
+    tools:context=".activity.RegistrationActivity">
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -14,7 +14,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:padding="16dp"
-        tools:context=".activity.LoginActivity">
+        tools:context=".activity.RegistrationActivity">
 
         <EditText
             android:id="@+id/emailEditText"
@@ -32,17 +32,19 @@
             android:inputType="textPassword"
             android:layout_marginBottom="16dp"/>
 
+        <EditText
+            android:id="@+id/nameEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Nome"
+            android:inputType="textPassword"
+            android:layout_marginBottom="16dp"/>
+
         <Button
             android:id="@+id/loginButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Login"/>
-
-        <Button
-            android:id="@+id/registryButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Clique aqui para se cadastrar"/>
+            android:text="Confirmar"/>
 
     </LinearLayout>
 
