--- a/app/src/main/res/layout/activity_diet.xml
+++ b/app/src/main/res/layout/activity_diet.xml
@@ -7,20 +7,28 @@
     android:layout_height="match_parent"
     tools:context=".activity.DietActivity">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
         android:padding="16dp">
 
-        <TextView
-            android:id="@+id/responseTextView"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Waiting for response..."
-            android:textSize="18sp"
-            android:padding="16dp"/>
-    </LinearLayout>
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/responseTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Waiting for response..."
+                android:textSize="18sp"
+                android:padding="16dp"/>
+
+            <!-- Adicione mais views aqui se necessário -->
+
+        </LinearLayout>
+    </ScrollView>
 
     <Button
         android:id="@+id/buttonUpdate"
