--- a/app/src/main/res/layout/activity_form.xml
+++ b/app/src/main/res/layout/activity_form.xml
@@ -12,88 +12,91 @@
         android:id="@+id/textViewWeight"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Peso (kg):"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="16dp"
         android:layout_marginStart="16dp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/editTextWeight" />
+        android:layout_marginTop="16dp"
+        android:text="Peso (kg):"
+        app:layout_constraintBaseline_toBaselineOf="@+id/editTextWeight"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/editTextWeight"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         android:inputType="numberDecimal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/textViewWeight"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="16dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <!-- Campo Altura -->
     <TextView
         android:id="@+id/textViewHeight"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Altura (cm):"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textViewWeight"
-        android:layout_marginTop="16dp"
         android:layout_marginStart="16dp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/editTextHeight" />
+        android:layout_marginTop="16dp"
+        android:text="Altura (cm):"
+        app:layout_constraintBaseline_toBaselineOf="@+id/editTextHeight"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textViewWeight" />
 
     <EditText
         android:id="@+id/editTextHeight"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         android:inputType="numberDecimal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/textViewHeight"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintTop_toBottomOf="@id/editTextWeight"
-        android:layout_marginTop="16dp" />
+        app:layout_constraintTop_toBottomOf="@id/editTextWeight" />
 
-    <!-- Campo Idade -->
+    <!-- Campo Data de Nascimento -->
     <TextView
-        android:id="@+id/textViewAge"
+        android:id="@+id/textViewDateOfBirth"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Idade:"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textViewHeight"
-        android:layout_marginTop="16dp"
         android:layout_marginStart="16dp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/editTextAge" />
+        android:layout_marginTop="16dp"
+        android:text="Data de Nascimento:"
+        app:layout_constraintBaseline_toBaselineOf="@+id/editTextDateOfBirth"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textViewHeight" />
 
     <EditText
-        android:id="@+id/editTextAge"
+        android:id="@+id/editTextDateOfBirth"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:inputType="number"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/textViewAge"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintTop_toBottomOf="@id/editTextHeight"
-        android:layout_marginTop="16dp" />
+        android:inputType="date"
+    android:hint="DD/MM/AAAA"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toEndOf="@id/textViewDateOfBirth"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="16dp"
+    app:layout_constraintTop_toBottomOf="@id/editTextHeight"
+    android:layout_marginTop="16dp"
+        />
+
 
     <!-- Botão de Envio -->
     <Button
         android:id="@+id/buttonSubmit"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="16dp"
+        android:backgroundTint="@color/black"
+        android:paddingVertical="16dp"
         android:text="Enviar"
         android:textAllCaps="false"
-        android:backgroundTint="@color/black"
         android:textColor="@android:color/white"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/editTextAge"
-        android:layout_marginTop="32dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:paddingVertical="16dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textViewDateOfBirth" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
